--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
     <style>
         :root {
-            --primary-color: #007BFF;
-            --secondary-color: #0056b3;
-            --background-color: #f9f9f9;
+            --primary-color: #3498db;
+            --secondary-color: #2c3e50;
+            --background-color: #ecf0f1;
             --text-color: #333;
             --light-text-color: #666;
-            --hover-color: #003d80;
+            --hover-color: #2980b9;
             --font-family: 'Raleway', sans-serif;
         }
 
@@ -35,13 +35,10 @@
         }
 
         header {
-            background-color: var(--primary-color);
+            background: url('globe.tiff') center/cover no-repeat, rgba(0, 0, 0, 0.5);
             color: #fff;
             padding: 100px 20px;
             text-align: center;
-            background-image: url('globe.tiff');
-            background-size: cover;
-            background-position: center;
             position: relative;
         }
 
@@ -78,6 +75,9 @@
 
         nav {
             background-color: var(--secondary-color);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
         }
 
         nav a {
@@ -175,6 +175,35 @@
             clip: rect(0, 0, 0, 0);
             border: 0;
         }
+
+        .card {
+            border: none;
+            border-radius: 0;
+            background: none;
+        }
+
+        .card img {
+            border-radius: 0;
+        }
+
+        .card-title,
+        .card-text {
+            text-align: center;
+        }
+
+        .card {
+            margin: 20px 0;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
     </style>
 </head>
 
@@ -183,7 +212,7 @@
         <h1>Oliver Joergensen</h1>
         <p>Welcome to my personal website</p>
     </header>
-    <nav aria-label="Main Navigation" class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav aria-label="Main Navigation" class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Oliver Joergensen</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -217,23 +246,22 @@
     <main>
         <section id="home" class="container welcome-container">
             <h2 class="text-center my-4">Welcome</h2>
-            <p class="text-center"> Hi, my name is Oliver Joergensen. I am a Swiss citizen with Danish origins,
-                currently pursuing a Bachelor's degree in Political Science. I thrive in dynamic
-                environments and am passionate about new challenges, learning new things, and teamwork.</p>
+            <p class="text-center">Hi, my name is Oliver Joergensen. I am a Swiss citizen with Danish origins, currently pursuing a Bachelor's degree in Political Science. I thrive in dynamic environments and am passionate about new challenges, learning new things, and teamwork.</p>
         </section>
         <section id="about" class="container">
             <h2 class="text-center my-4">About Me</h2>
-            <p>My previous positions have equipped me with extensive experience in customer service and
-                payment processing, along with strong adaptability and teamwork skills developed through a variety of roles...</p>
-            <h3 class="text-center my-3">Education</h3>
-            <ul class="list-group">
-                <li class="list-group-item">University of Zürich, BS: Major in Political Science, Minor in Mathematics</li>
-                <li class="list-group-item">SIS Swiss International School, Matura, Zürich, 2018</li>
-            </ul>
+            <div class="card">
+                <p>My previous positions have equipped me with extensive experience in customer service and payment processing, along with strong adaptability and teamwork skills developed through a variety of roles...</p>
+                <h3 class="text-center my-3">Education</h3>
+                <ul class="list-group">
+                    <li class="list-group-item">University of Zürich, BS: Major in Political Science, Minor in Mathematics</li>
+                    <li class="list-group-item">SIS Swiss International School, Matura, Zürich, 2018</li>
+                </ul>
+            </div>
         </section>
         <section id="career" class="container">
             <h2 class="text-center my-4">Career</h2>
-            <div class="centered-text">
+            <div class="card">
                 <h4>Joe & the Juice (2018 - 2020)</h4>
                 <p>Part-Time Employee: Juicer responsible for customer contact, product manufacture for direct sale, sales, and cash register management.</p>
                 <h4>Kita Sumatra (03.2021 - 09.2021)</h4>
@@ -244,17 +272,19 @@
         </section>
         <section id="skills" class="container">
             <h2 class="text-center my-4">Skills</h2>
-            <h3 class="text-center my-3">Languages</h3>
-            <ul class="list-group">
-                <li class="list-group-item">German: Native</li>
-                <li class="list-group-item">Danish: Native</li>
-                <li class="list-group-item">English: Fluent</li>
-            </ul>
-            <h3 class="text-center my-3">Other Skills</h3>
-            <ul class="list-group">
-                <li class="list-group-item">Analytical thinking from studying Political Science and Mathematics</li>
-                <li class="list-group-item">Experienced in customer service and payment processing</li>
-            </ul>
+            <div class="card">
+                <h3 class="text-center my-3">Languages</h3>
+                <ul class="list-group">
+                    <li class="list-group-item">German: Native</li>
+                    <li class="list-group-item">Danish: Native</li>
+                    <li class="list-group-item">English: Fluent</li>
+                </ul>
+                <h3 class="text-center my-3">Other Skills</h3>
+                <ul class="list-group">
+                    <li class="list-group-item">Analytical thinking from studying Political Science and Mathematics</li>
+                    <li class="list-group-item">Experienced in customer service and payment processing</li>
+                </ul>
+            </div>
         </section>
         <section id="activities" class="container">
             <h2 class="text-center my-4">Hobbies & Interests</h2>
@@ -287,24 +317,26 @@
         </section>
         <section id="contact" class="container">
             <h2 class="text-center my-4">Contact</h2>
-            <form>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-                </div>
-                <div class="mb-3">
-                    <label for="message" class="form-label">Message</label>
-                    <textarea class="form-control" id="message" rows="3"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+            <div class="card">
+                <form>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                    </div>
+                    <div class="mb-3">
+                        <label for="message" class="form-label">Message</label>
+                        <textarea class="form-control" id="message" rows="3"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
         </section>
     </main>
     <footer class="text-center py-3 bg-dark text-light">
         <p>© 2024 Oliver Joergensen. All rights reserved.</p>
         <div>
             <a href="https://linkedin.com/in/oliverjoergensen" target="_blank" class="text-light">LinkedIn</a> |
-            <a href="https://twitter.com/oliverjoergensen" target="_blank" class="text-light">Twitter</a>
+            <a href="https://www.instagram.com" target="_blank" class="text-light">Instagram</a>
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
