--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
 
 <body>
     <header>
-        <h1>Welcome to My Personal Website</h1>
-        <p>Discover my journey and interests</p>
+        <h1>Oliver Joergensen</h1>
+        <p>Welcome to my personal website</p>
     </header>
     <nav aria-label="Main Navigation" class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
