--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             padding: 0;
             background-color: var(--background-color);
             color: var(--text-color);
-            line-height: 1.6;
+            line-height: 1.8;
         }
 
         header {
-            background: url('globe.tiff') center/cover no-repeat, rgba(0, 0, 0, 0.5);
+            background: url('globe.jpg') center/cover no-repeat, rgba(0, 0, 0, 0.5);
             color: #fff;
             padding: 100px 20px;
             text-align: center;
@@ -187,26 +187,12 @@
 
         .card {
             border: none;
-            border-radius: 0;
-            background: none;
-        }
-
-        .card img {
-            border-radius: 0;
-        }
-
-        .card-title,
-        .card-text {
-            text-align: center;
-        }
-
-        .card {
-            margin: 20px 0;
-            padding: 20px;
-            background-color: #fff;
             border-radius: 8px;
+            background: #fff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+            padding: 20px;
+            margin: 20px 0;
         }
 
         .card:hover {
@@ -274,29 +260,29 @@
         </section>
         <section id="about" class="container">
             <h2 class="text-center my-4">About Me</h2>
-            <div class="card">
+            <article class="card">
                 <p>My previous positions have equipped me with extensive experience in customer service and payment processing, along with strong adaptability and teamwork skills developed through a variety of roles...</p>
                 <h3 class="text-center my-3">Education</h3>
                 <ul class="list-group">
                     <li class="list-group-item">University of Zürich, BS: Major in Political Science, Minor in Mathematics</li>
                     <li class="list-group-item">SIS Swiss International School, Matura, Zürich, 2018</li>
                 </ul>
-            </div>
+            </article>
         </section>
         <section id="career" class="container">
             <h2 class="text-center my-4">Career</h2>
-            <div class="card">
+            <article class="card">
                 <h4>Joe & the Juice (2018 - 2020)</h4>
                 <p>Part-Time Employee: Juicer responsible for customer contact, product manufacture for direct sale, sales, and cash register management.</p>
                 <h4>Kita Sumatra (03.2021 - 09.2021)</h4>
                 <p>Civilian service assignment involving household and environmental work, social pedagogy, and parental work.</p>
                 <h4>McDonald's (04.2022 - 02.2023)</h4>
                 <p>Crew Employee responsible for kitchen, storage, waste recycling, cleaning (cash desk, dining room, restrooms, parking lot, Playland, restaurant surroundings).</p>
-            </div>
+            </article>
         </section>
         <section id="skills" class="container">
             <h2 class="text-center my-4">Skills</h2>
-            <div class="card">
+            <article class="card">
                 <h3 class="text-center my-3">Languages</h3>
                 <ul class="list-group">
                     <li class="list-group-item">German: Native</li>
@@ -308,42 +294,42 @@
                     <li class="list-group-item">Analytical thinking from studying Political Science and Mathematics</li>
                     <li class="list-group-item">Experienced in customer service and payment processing</li>
                 </ul>
-            </div>
+            </article>
         </section>
         <section id="activities" class="container">
             <h2 class="text-center my-4">Hobbies & Interests</h2>
             <div class="hobbies-container">
-                <a href="fitness.html" class="hobby-box" style="background-image: url('gym.png');" target="_blank">
+                <a href="fitness.html" class="hobby-box" style="background-image: url('gym.webp');" target="_blank">
                     <p>Fitness</p>
-                    <img src="gym.png" alt="Fitness" class="sr-only">
+                    <img src="gym.webp" alt="Fitness" class="sr-only" loading="lazy">
                 </a>
-                <a href="cooking.html" class="hobby-box" style="background-image: url('cooking.jpeg');" target="_blank">
+                <a href="cooking.html" class="hobby-box" style="background-image: url('cooking.webp');" target="_blank">
                     <p>Cooking</p>
-                    <img src="cooking.jpeg" alt="Cooking" class="sr-only">
+                    <img src="cooking.webp" alt="Cooking" class="sr-only" loading="lazy">
                 </a>
-                <a href="reading.html" class="hobby-box" style="background-image: url('reading.jpeg');" target="_blank">
+                <a href="reading.html" class="hobby-box" style="background-image: url('reading.webp');" target="_blank">
                     <p>Reading</p>
-                    <img src="reading.jpeg" alt="Reading" class="sr-only">
+                    <img src="reading.webp" alt="Reading" class="sr-only" loading="lazy">
                 </a>
-                <a href="politics.html" class="hobby-box" style="background-image: url('politics.jpeg');" target="_blank">
+                <a href="politics.html" class="hobby-box" style="background-image: url('politics.webp');" target="_blank">
                     <p>Politics</p>
-                    <img src="politics.jpeg" alt="Politics" class="sr-only">
+                    <img src="politics.webp" alt="Politics" class="sr-only" loading="lazy">
                 </a>
-                <a href="current.html" class="hobby-box" style="background-image: url('current.jpeg');" target="_blank">
+                <a href="current.html" class="hobby-box" style="background-image: url('current.webp');" target="_blank">
                     <p>Current Affairs</p>
-                    <img src="current.jpeg" alt="Current Affairs" class="sr-only">
+                    <img src="current.webp" alt="Current Affairs" class="sr-only" loading="lazy">
                 </a>
-                <a href="travel.html" class="hobby-box" style="background-image: url('travel.jpeg');" target="_blank">
+                <a href="travel.html" class="hobby-box" style="background-image: url('travel.webp');" target="_blank">
                     <p>Travel</p>
-                    <img src="travel.jpeg" alt="Travel" class="sr-only">
+                    <img src="travel.webp" alt="Travel" class="sr-only" loading="lazy">
                 </a>
             </div>
         </section>
         <section id="contact" class="container">
             <h2 class="text-center my-4">Contact</h2>
-            <div class="card">
+            <article class="card">
                 <p class="text-center">You can reach me at: <a href="mailto:oliver.joergensen@outlook.com">oliver.joergensen@outlook.com</a></p>
-            </div>
+            </article>
         </section>
     </main>
     <footer class="text-center py-3 bg-dark text-light">
@@ -393,6 +379,21 @@
                 behavior: 'smooth'
             });
         });
+    </script>
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Oliver Joergensen",
+        "jobTitle": "Political Science Student",
+        "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Zurich",
+            "addressCountry": "Switzerland"
+        },
+        "alumniOf": "University of Zürich",
+        "knowsAbout": ["Political Science", "Customer Service"]
+    }
     </script>
 </body>
 
