--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
 
         header {
-            background: url('globe.jpg') center/cover no-repeat, rgba(0, 0, 0, 0.5);
+            background: url('globe.tiff') center/cover no-repeat, rgba(0, 0, 0, 0.5);
             color: #fff;
             padding: 100px 20px;
             text-align: center;
@@ -299,29 +299,29 @@
         <section id="activities" class="container">
             <h2 class="text-center my-4">Hobbies & Interests</h2>
             <div class="hobbies-container">
-                <a href="fitness.html" class="hobby-box" style="background-image: url('gym.webp');" target="_blank">
+                <a href="fitness.html" class="hobby-box" style="background-image: url('gym.png');" target="_blank">
                     <p>Fitness</p>
-                    <img src="gym.webp" alt="Fitness" class="sr-only" loading="lazy">
+                    <img src="gym.png" alt="Fitness" class="sr-only" loading="lazy">
                 </a>
-                <a href="cooking.html" class="hobby-box" style="background-image: url('cooking.webp');" target="_blank">
+                <a href="cooking.html" class="hobby-box" style="background-image: url('cooking.jpeg');" target="_blank">
                     <p>Cooking</p>
-                    <img src="cooking.webp" alt="Cooking" class="sr-only" loading="lazy">
+                    <img src="cooking.jpeg" alt="Cooking" class="sr-only" loading="lazy">
                 </a>
-                <a href="reading.html" class="hobby-box" style="background-image: url('reading.webp');" target="_blank">
+                <a href="reading.html" class="hobby-box" style="background-image: url('reading.jpeg');" target="_blank">
                     <p>Reading</p>
-                    <img src="reading.webp" alt="Reading" class="sr-only" loading="lazy">
+                    <img src="reading.jpeg" alt="Reading" class="sr-only" loading="lazy">
                 </a>
-                <a href="politics.html" class="hobby-box" style="background-image: url('politics.webp');" target="_blank">
+                <a href="politics.html" class="hobby-box" style="background-image: url('politics.jpeg');" target="_blank">
                     <p>Politics</p>
-                    <img src="politics.webp" alt="Politics" class="sr-only" loading="lazy">
+                    <img src="politics.jpeg" alt="Politics" class="sr-only" loading="lazy">
                 </a>
-                <a href="current.html" class="hobby-box" style="background-image: url('current.webp');" target="_blank">
+                <a href="current.html" class="hobby-box" style="background-image: url('current.jpeg');" target="_blank">
                     <p>Current Affairs</p>
-                    <img src="current.webp" alt="Current Affairs" class="sr-only" loading="lazy">
+                    <img src="current.jpeg" alt="Current Affairs" class="sr-only" loading="lazy">
                 </a>
-                <a href="travel.html" class="hobby-box" style="background-image: url('travel.webp');" target="_blank">
+                <a href="travel.html" class="hobby-box" style="background-image: url('travel.jpeg');" target="_blank">
                     <p>Travel</p>
-                    <img src="travel.webp" alt="Travel" class="sr-only" loading="lazy">
+                    <img src="travel.jpeg" alt="Travel" class="sr-only" loading="lazy">
                 </a>
             </div>
         </section>
