--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 
         nav {
             background-color: var(--secondary-color);
-            position: sticky;
+            position: fixed;
+            width: 100%;
             top: 0;
             z-index: 1000;
         }
@@ -105,9 +106,13 @@
         }
 
         .container {
-            padding: 40px 20px;
+            padding: 80px 20px 40px;
             max-width: 1200px;
             margin: 0 auto;
+        }
+
+        section {
+            padding: 60px 0;
         }
 
         .hobbies-container {
