--- a/fitness.html
+++ b/fitness.html
@@ -4,24 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oliver Joergensen</title>
+    <title>Personal Website</title>
     <meta name="description" content="Personal website of Oliver Joergensen, a Political Science student with experience in customer service and a passion for learning new things.">
     <meta name="keywords" content="Oliver Joergensen, Political Science, Customer Service, Learning">
     <meta name="author" content="Oliver Joergensen">
-    <meta property="og:title" content="Oliver Joergensen" />
+    <meta property="og:title" content="Personal Website" />
     <meta property="og:description" content="Personal website of Oliver Joergensen, a Political Science student with experience in customer service and a passion for learning new things." />
     <meta property="og:image" content="url-to-image.jpg" />
     <meta property="og:url" content="url-to-website.com" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         :root {
-            --primary-color: #007BFF;
-            --secondary-color: #0056b3;
-            --background-color: #f9f9f9;
+            --primary-color: #1e90ff;
+            --secondary-color: #4682b4;
+            --background-color: #e9f5ff;
             --text-color: #333;
             --light-text-color: #666;
-            --hover-color: #003d80;
+            --hover-color: #1c86ee;
             --font-family: 'Raleway', sans-serif;
         }
 
@@ -35,13 +36,10 @@
         }
 
         header {
-            background-color: var(--primary-color);
+            background: url('globe.tiff') center/cover no-repeat, rgba(0, 0, 0, 0.5);
             color: #fff;
             padding: 100px 20px;
             text-align: center;
-            background-image: url('globe.tiff');
-            background-size: cover;
-            background-position: center;
             position: relative;
         }
 
@@ -77,11 +75,16 @@
         }
 
         nav {
-            background-color: rgba(0, 86, 179, 0.9);
+            background-color: var(--secondary-color);
             position: sticky;
             top: 0;
             z-index: 1000;
-            transition: background-color 0.3s ease;
+            opacity: 0.9;
+        }
+
+        nav .navbar-brand {
+            font-size: 1.5em;
+            font-weight: 700;
         }
 
         nav a {
@@ -98,35 +101,15 @@
             color: #f9f9f9;
         }
 
+        .navbar-nav {
+            margin: auto;
+            justify-content: center;
+        }
+
         .container {
-            padding: 60px 20px;
+            padding: 40px 20px;
             max-width: 1200px;
             margin: 0 auto;
-        }
-
-        .text-center {
-            text-align: center;
-        }
-
-        h2 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-            color: var(--primary-color);
-        }
-
-        h3 {
-            font-size: 2em;
-            margin-bottom: 15px;
-            color: var(--secondary-color);
-        }
-
-        p, ul {
-            margin-bottom: 20px;
-        }
-
-        .list-group-item {
-            font-size: 1.2em;
-            padding: 15px 20px;
         }
 
         .hobbies-container {
@@ -182,7 +165,6 @@
             font-size: 1.5em;
             cursor: pointer;
             z-index: 10;
-            transition: background-color 0.3s ease;
         }
 
         #back-to-top:hover {
@@ -205,23 +187,35 @@
             border: 0;
         }
 
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 20px 0;
+        .card {
+            border: none;
+            border-radius: 8px;
+            background: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            padding: 20px;
+            margin: 20px 0;
         }
 
-        footer p {
-            margin: 0;
+        .card:hover {
+            transform: scale(1.05);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
 
-        footer a {
+        .footer-icons {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+        }
+
+        .footer-icons a {
             color: #fff;
             text-decoration: none;
+            font-size: 1.5em;
         }
 
-        footer a:hover {
-            text-decoration: underline;
+        .footer-icons a:hover {
+            color: var(--hover-color);
         }
     </style>
 </head>
@@ -233,12 +227,11 @@
     </header>
     <nav aria-label="Main Navigation" class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Oliver Joergensen</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#home">Home</a>
                     </li>
@@ -265,94 +258,87 @@
     <main>
         <section id="home" class="container welcome-container">
             <h2 class="text-center my-4">Welcome</h2>
-            <p class="text-center"> Hi, my name is Oliver Joergensen. I am a Swiss citizen with Danish origins,
-                currently pursuing a Bachelor's degree in Political Science. I thrive in dynamic
-                environments and am passionate about new challenges, learning new things, and teamwork.</p>
+            <p class="text-center">Hi, my name is Oliver Joergensen. I am a Swiss citizen with Danish origins, currently pursuing a Bachelor's degree in Political Science. I thrive in dynamic environments and am passionate about new challenges, learning new things, and teamwork.</p>
         </section>
         <section id="about" class="container">
             <h2 class="text-center my-4">About Me</h2>
-            <p>My previous positions have equipped me with extensive experience in customer service and
-                payment processing, along with strong adaptability and teamwork skills developed through a variety of roles...</p>
-            <h3 class="text-center my-3">Education</h3>
-            <ul class="list-group">
-                <li class="list-group-item">University of Zürich, BS: Major in Political Science, Minor in Mathematics</li>
-                <li class="list-group-item">SIS Swiss International School, Matura, Zürich, 2018</li>
-            </ul>
+            <article class="card">
+                <p>My previous positions have equipped me with extensive experience in customer service and payment processing, along with strong adaptability and teamwork skills developed through a variety of roles...</p>
+                <h3 class="text-center my-3">Education</h3>
+                <ul class="list-group">
+                    <li class="list-group-item">University of Zürich, BS: Major in Political Science, Minor in Mathematics</li>
+                    <li class="list-group-item">SIS Swiss International School, Matura, Zürich, 2018</li>
+                </ul>
+            </article>
         </section>
         <section id="career" class="container">
             <h2 class="text-center my-4">Career</h2>
-            <div class="centered-text">
+            <article class="card">
                 <h4>Joe & the Juice (2018 - 2020)</h4>
                 <p>Part-Time Employee: Juicer responsible for customer contact, product manufacture for direct sale, sales, and cash register management.</p>
                 <h4>Kita Sumatra (03.2021 - 09.2021)</h4>
                 <p>Civilian service assignment involving household and environmental work, social pedagogy, and parental work.</p>
                 <h4>McDonald's (04.2022 - 02.2023)</h4>
                 <p>Crew Employee responsible for kitchen, storage, waste recycling, cleaning (cash desk, dining room, restrooms, parking lot, Playland, restaurant surroundings).</p>
-            </div>
+            </article>
         </section>
         <section id="skills" class="container">
             <h2 class="text-center my-4">Skills</h2>
-            <h3 class="text-center my-3">Languages</h3>
-            <ul class="list-group">
-                <li class="list-group-item">German: Native</li>
-                <li class="list-group-item">Danish: Native</li>
-                <li class="list-group-item">English: Fluent</li>
-            </ul>
-            <h3 class="text-center my-3">Other Skills</h3>
-            <ul class="list-group">
-                <li class="list-group-item">Analytical thinking from studying Political Science and Mathematics</li>
-                <li class="list-group-item">Experienced in customer service and payment processing</li>
-            </ul>
+            <article class="card">
+                <h3 class="text-center my-3">Languages</h3>
+                <ul class="list-group">
+                    <li class="list-group-item">German: Native</li>
+                    <li class="list-group-item">Danish: Native</li>
+                    <li class="list-group-item">English: Fluent</li>
+                </ul>
+                <h3 class="text-center my-3">Other Skills</h3>
+                <ul class="list-group">
+                    <li class="list-group-item">Analytical thinking from studying Political Science and Mathematics</li>
+                    <li class="list-group-item">Experienced in customer service and payment processing</li>
+                </ul>
+            </article>
         </section>
         <section id="activities" class="container">
             <h2 class="text-center my-4">Hobbies & Interests</h2>
             <div class="hobbies-container">
                 <a href="fitness.html" class="hobby-box" style="background-image: url('gym.png');" target="_blank">
                     <p>Fitness</p>
-                    <img src="gym.png" alt="Fitness" class="sr-only">
+                    <img src="gym.png" alt="Fitness" class="sr-only" loading="lazy">
                 </a>
                 <a href="cooking.html" class="hobby-box" style="background-image: url('cooking.jpeg');" target="_blank">
                     <p>Cooking</p>
-                    <img src="cooking.jpeg" alt="Cooking" class="sr-only">
+                    <img src="cooking.jpeg" alt="Cooking" class="sr-only" loading="lazy">
                 </a>
                 <a href="reading.html" class="hobby-box" style="background-image: url('reading.jpeg');" target="_blank">
                     <p>Reading</p>
-                    <img src="reading.jpeg" alt="Reading" class="sr-only">
+                    <img src="reading.jpeg" alt="Reading" class="sr-only" loading="lazy">
                 </a>
                 <a href="politics.html" class="hobby-box" style="background-image: url('politics.jpeg');" target="_blank">
                     <p>Politics</p>
-                    <img src="politics.jpeg" alt="Politics" class="sr-only">
+                    <img src="politics.jpeg" alt="Politics" class="sr-only" loading="lazy">
                 </a>
                 <a href="current.html" class="hobby-box" style="background-image: url('current.jpeg');" target="_blank">
                     <p>Current Affairs</p>
-                    <img src="current.jpeg" alt="Current Affairs" class="sr-only">
+                    <img src="current.jpeg" alt="Current Affairs" class="sr-only" loading="lazy">
                 </a>
                 <a href="travel.html" class="hobby-box" style="background-image: url('travel.jpeg');" target="_blank">
                     <p>Travel</p>
-                    <img src="travel.jpeg" alt="Travel" class="sr-only">
+                    <img src="travel.jpeg" alt="Travel" class="sr-only" loading="lazy">
                 </a>
             </div>
         </section>
         <section id="contact" class="container">
             <h2 class="text-center my-4">Contact</h2>
-            <form>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-                </div>
-                <div class="mb-3">
-                    <label for="message" class="form-label">Message</label>
-                    <textarea class="form-control" id="message" rows="3"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+            <article class="card">
+                <p class="text-center">You can reach me at: <a href="mailto:oliver.joergensen@outlook.com">oliver.joergensen@outlook.com</a></p>
+            </article>
         </section>
     </main>
     <footer class="text-center py-3 bg-dark text-light">
         <p>© 2024 Oliver Joergensen. All rights reserved.</p>
-        <div>
-            <a href="https://linkedin.com/in/oliverjoergensen" target="_blank" class="text-light">LinkedIn</a> |
-            <a href="https://twitter.com/oliverjoergensen" target="_blank" class="text-light">Twitter</a>
+        <div class="footer-icons">
+            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
@@ -362,7 +348,7 @@
             const navLinks = document.querySelectorAll('nav a');
             let index = sections.length;
 
-            while (--index && window.scrollY + 50 < sections[index].offsetTop) { }
+            while (--index && window.scrollY + 50 < sections[index].offsetTop) {}
 
             navLinks.forEach((link) => link.classList.remove('active'));
             navLinks[index].classList.add('active');
@@ -394,6 +380,21 @@
                 behavior: 'smooth'
             });
         });
+    </script>
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Oliver Joergensen",
+        "jobTitle": "Political Science Student",
+        "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Zurich",
+            "addressCountry": "Switzerland"
+        },
+        "alumniOf": "University of Zürich",
+        "knowsAbout": ["Political Science", "Customer Service"]
+    }
     </script>
 </body>
 
