--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Website</title>
+    <title>Oliver Joergensen | Political Science Student</title>
     <meta name="description" content="Personal website of Oliver Joergensen, a Political Science student with experience in customer service and a passion for learning new things.">
     <meta name="keywords" content="Oliver Joergensen, Political Science, Customer Service, Learning">
     <meta name="author" content="Oliver Joergensen">
-    <meta property="og:title" content="Personal Website" />
+    <meta property="og:title" content="Oliver Joergensen | Political Science Student" />
     <meta property="og:description" content="Personal website of Oliver Joergensen, a Political Science student with experience in customer service and a passion for learning new things." />
     <meta property="og:image" content="url-to-image.jpg" />
     <meta property="og:url" content="url-to-website.com" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         :root {
             --primary-color: #1e90ff;
@@ -35,7 +36,7 @@
         }
 
         header {
-            background: url('globe.tiff') center/cover no-repeat, rgba(0, 0, 0, 0.5);
+            background: url('globe.jpg') center/cover no-repeat, rgba(0, 0, 0, 0.5);
             color: #fff;
             padding: 100px 20px;
             text-align: center;
@@ -341,14 +342,13 @@
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script>
         document.addEventListener('scroll', function () {
             const sections = document.querySelectorAll('section');
             const navLinks = document.querySelectorAll('nav a');
             let index = sections.length;
 
-            while (--index && window.scrollY + 50 < sections[index].offsetTop) { }
+            while (--index && window.scrollY + 50 < sections[index].offsetTop) {}
 
             navLinks.forEach((link) => link.classList.remove('active'));
             navLinks[index].classList.add('active');
