--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         }
 
         header {
-            background: url('globe.jpg') center/cover no-repeat, rgba(0, 0, 0, 0.5);
+            background: url('globe.tiff') center/cover no-repeat, rgba(0, 0, 0, 0.5);
             color: #fff;
             padding: 100px 20px;
             text-align: center;
